--- a/ExcelDNARTD2/ExcelDNARTD2.csproj
+++ b/ExcelDNARTD2/ExcelDNARTD2.csproj
@@ -213,12 +213,15 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArrayResizer2.cs" />
     <Compile Include="AsyncBatchSample.cs" />
     <Compile Include="DataWrapper.cs" />
     <Compile Include="dnaFunctions.cs" />
     <Compile Include="LimitedConcurrencyAsync\AsyncFunctions.cs" />
     <Compile Include="LimitedConcurrencyAsync\AsyncTaskUtil.cs" />
     <Compile Include="LimitedConcurrencyAsync\LimitedConcurrencyLevelTaskScheduler.cs" />
+    <Compile Include="Model\Asset.cs" />
+    <Compile Include="Model\AssetNotificacao.cs" />
     <Compile Include="Model\Baralho.cs" />
     <Compile Include="MyAddIn.cs" />
     <Compile Include="MyFunctions.cs" />
@@ -229,6 +232,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RtdClock\RtdClock.cs" />
     <Compile Include="SignalRServer.cs" />
+    <Compile Include="Upload.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
